fix table fail|

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
     restart: unless-stopped
     working_dir: /var/webapps/html
     volumes:
-      - ./app:/var/webapps/html
+      - ./:/var/webapps/html  # <-- Ubah dari ./app ke ./
     networks:
       - laravel-network
 
@@ -22,7 +22,7 @@ services:
     ports:
       - "80:80"
     volumes:
-      - ./app:/var/webapps/html
+      - ./:/var/webapps/html  # <-- Ubah dari ./app ke ./
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
     depends_on:
       - app
@@ -38,7 +38,7 @@ services:
       MYSQL_DATABASE: ${DB_DATABASE}
       MYSQL_ROOT_PASSWORD: ${DB_PASSWORD}
       MYSQL_PASSWORD: ${DB_PASSWORD}
-      MYSQL_USER: ${DB_USERNAME}
+      # MYSQL_USER: ${DB_USERNAME}
     volumes:
       - dbdata:/var/lib/mysql
     networks:
